Modified table css to prevent word wrapping

--- a/css/gitsense.css
+++ b/css/gitsense.css
@@ -8,6 +8,10 @@ body {
     font-weight:400; color: black;
 }
 
+table {
+    white-space:nowrap;
+}
+
 th.index {
     font-size: 22px;
     border-bottom: 2px solid #666;
